--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html;charset=Shift_JIS" />
-<meta name="Author" content="北村曉 (KITAMURA Akatsuki)" />
 <link rel="Stylesheet" title="solidborder" href="style/sb-top.css" type="text/css" media="screen" />
-<link rev="Made" href="mailto:kits&#64;akatsukinishisu.net" />
-
-<link rel="Start" href="/" />
-<link rel="Contents" href="/index2.html" />
 
 <title>Zhaoyi Ge</title>
 
@@ -82,7 +77,7 @@
 
 <h1 style="text-align: left;"><div style="padding-left: 58px;">Links</div></h1>
 
-<ul style="text-align: left;"> 
+<ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 16px; margin-right: 10px;"> 
     <li><a href="https://github.com/zhaoyig">Github</a></li>
 </ul>
 <address>
