--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div style="text-align: left; font-size: 15px; margin-top:10px; margin-left: 10px; font-family: monospace;">z33ge@uwaterloo.ca</div>
     </div>
     <div id="second">
-        <div style="text-align: left; margin-top:10px; font-size: 18px;">I'm a 4th year Computer Science student at the University of Waterloo.
+        <div style="text-align: left; margin-top:10px; font-size: 18px;">I'm a 4th year Computer Science student at the University of Waterloo. Sometimes I go by the name of August.
             <br><br>I am generally interested in type systems, algebraic effects, functional programming and logics in computer science.</div>
     </div>
     <div id="clear"></div>
@@ -84,6 +84,7 @@
 <a href="mailto:z33ge@uwaterloo.ca"><div style="padding-right: 58px;">z33ge@uwaterloo.ca</div></a>
 </address>
 
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="https://music.163.com/outchain/player?type=0&id=114815407&auto=1&height=430"></iframe>
 
 </div><!-- main end -->
 
