--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 
 <ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 16px; margin-right: 10px;"> 
     <li><a href="https://github.com/zhaoyig">Github</a></li>
+    <li><a href="https://github.com/lexa-lang/lexa">The Lexa Programmming Language</a></li>
 </ul>
+
 <address>
 <a href="mailto:z33ge@uwaterloo.ca"><div style="padding-right: 58px;">z33ge@uwaterloo.ca</div></a>
 </address>
