--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body style="font-size: 18px;">
 
-<div style="width: 516px; margin-left: auto; margin-right: auto; border-left:solid 1px #333; border-right:solid 1px #333;">
+<div style="width: 700px; margin-left: auto; margin-right: auto;">
 <h1><div style="padding-left: 58px;">About me</div></h1>
 
 <div id="container">
@@ -53,7 +53,8 @@
         <div style="text-align: left; font-size: 15px; margin-top:10px; margin-left: 10px; font-family: monospace;">z33ge@uwaterloo.ca</div>
     </div>
     <div id="second">
-        <div style="text-align: left; margin-top:10px; font-size: 18px;">I'm a 4th year Computer Science student at the University of Waterloo. Sometimes I go by the name of August.
+        <div style="text-align: left; margin-top:10px; font-size: 16px; color: #003049;">
+            I'm a 4th year Computer Science student at the University of Waterloo. Sometimes I go by the name of August.
             <br><br>I am generally interested in type systems, algebraic effects, functional programming and logics in computer science.</div>
     </div>
     <div id="clear"></div>
@@ -69,7 +70,7 @@
         <a class="pub-title" style="float: right; width: auto;" href="https://2024.splashcon.org/details/splash-2024-oopsla/113/Lexical-Effect-Handlers-Directly" target="_blank">OOPSLA 2024</a>
         <br>
         <i>Cong Ma, Zhaoyi Ge, Edward Lee, Yizhou Zhang</i>
-        <div style="font-family: Georgia, Times, 'Times New Roman', serif; font-size: 16px; color: rgb(0, 4, 55);">Compiling high-level, modular algebraic effects to low-level, swift stack switching</div>
+        <div style="font-family: Georgia, Times, 'Times New Roman', serif; font-size: 16px; color: #003049;">Compiling high-level, modular algebraic effects to low-level, swift stack switching</div>
     </li>
 </ul>
 
