--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div style="text-align: left; font-size: x-large; margin-top:10px; margin-left: 10px;">Zhaoyi Ge</div>
         <div style="text-align: left; font-size: large; margin-top:10px; margin-left: 10px; letter-spacing: 2px;">葛兆易</div>
         <br>
-        <div style="text-align: left; font-size: 15px; margin-top:10px; margin-left: 10px; font-family: monospace;">z33ge@uwaterloo.ca</div>
+        <div style="text-align: left; font-size: 15px; margin-top:10px; margin-left: 10px; font-family: monospace;">zhaoyi.ge@uwaterloo.ca</div>
     </div>
     <div id="second">
         <div style="text-align: left; margin-top:10px; font-size: 16px; color: #003049;">
@@ -84,7 +84,7 @@
 </ul>
 
 <address>
-<a href="mailto:z33ge@uwaterloo.ca"><div style="padding-right: 58px;">z33ge@uwaterloo.ca</div></a>
+<a href="mailto:zhaoyi.ge@uwaterloo.ca"><div style="padding-right: 58px;">zhaoyi.ge@uwaterloo.ca</div></a>
 </address>
 
 <!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="https://music.163.com/outchain/player?type=0&id=114815407&auto=1&height=430"></iframe> -->
