--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="second">
         <div style="text-align: left; margin-top:10px; font-size: 16px; color: #003049;">
             I'm a 4th year Computer Science student at the University of Waterloo. Sometimes I go by the name of August.
-            <br><br>I am generally interested in type systems, algebraic effects, functional programming and logics in computer science.</div>
+            <br><br>I am interested in type systems, algebraic effects, functional programming and logics in computer science.</div>
     </div>
     <div id="clear"></div>
 </div>
