--- a/index.html
+++ b/index.html
@@ -28,13 +28,6 @@
         height: 150px;
         margin: 0%;
     }
-    #clear {
-        clear: both;
-    }
-
-    #pub {
-        font-size: 10;
-    }
 </style>
 
 
@@ -48,37 +41,55 @@
 <div id="container">
     <div id="first">
         <div style="text-align: left; font-size: x-large; margin-top:10px; margin-left: 10px;">Zhaoyi Ge</div>
-        <div style="text-align: left; font-size: large; margin-top:10px; margin-left: 10px; letter-spacing: 2px;">葛兆易</div>
+        <div style="text-align: left; font-size: large; margin-top:10px; margin-left: 10px; letter-spacing: 2px; font-family: serif;">葛兆易</div>
         <br>
-        <div style="text-align: left; font-size: 15px; margin-top:10px; margin-left: 10px; font-family: monospace;">zhaoyi.ge@uwaterloo.ca</div>
+        <div style="text-align: left; font-size: 16px; margin-top:10px; margin-left: 10px; font-family: monospace;">zhaoyi.ge@uwaterloo.ca</div>
     </div>
     <div id="second">
-        <div style="text-align: left; margin-top:10px; font-size: 16px; color: #003049;">
-            I'm a 4th year Computer Science student at the University of Waterloo. Sometimes I go by the name of August.
+        <div style="text-align: left; margin-top:10px; font-size: 18px;">
+            I'm a 4th year Computer Science undergrad at the University of Waterloo. Sometimes I go by the name of August.
             <br><br>I am interested in type systems, algebraic effects, functional programming and logics in computer science.</div>
     </div>
     <div id="clear"></div>
 </div>
 
 <br>
+<div style="margin-bottom: 180px;"></div>
 
 <h1 style="text-align: left;"><div style="padding-left: 58px;">Publications</div></h1>
 
-<ul id="pub-list" style="text-align: left; margin-left: 10px; padding: 0%; font-size: 16px; margin-right: 10px;">
-    <li>
+<ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 18px; margin-right: 10px;">
+
+    <li class="pub-list">
+        <div class="pub-title" style="float: left; width: auto;"><b>Zero-Cost Lexical Effect Handlers</b></div>
+        <a class="pub-title" style="float: right; width: auto;" href="" target="_blank">In Submission</a>
+        <br>
+        <i>Cong Ma, Zhaoyi Ge, Yizhou Zhang</i>
+        <div style="color: #04003d;">
+            Lexical Effect Handlers with Zero Overhead
+        </div>
+    </li>
+
+
+    <li class="pub-list">
         <div class="pub-title" style="float: left; width: auto;"><b>Lexical Effect Handlers, Directly</b></div>
         <a class="pub-title" style="float: right; width: auto;" href="https://2024.splashcon.org/details/splash-2024-oopsla/113/Lexical-Effect-Handlers-Directly" target="_blank">OOPSLA 2024</a>
         <br>
         <i>Cong Ma, Zhaoyi Ge, Edward Lee, Yizhou Zhang</i>
-        <div style="font-family: Georgia, Times, 'Times New Roman', serif; font-size: 16px; color: #003049;">Compiling high-level, modular algebraic effects to low-level, swift stack switching</div>
+        <div style="color: #04003d;">
+            Compiling high-level, modular algebraic effects to low-level, swift stack switching
+        </div>
     </li>
+
+
 </ul>
 
+<br>
 <br>
 
 <h1 style="text-align: left;"><div style="padding-left: 58px;">Links</div></h1>
 
-<ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 16px; margin-right: 10px;"> 
+<ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 18px; margin-right: 10px;"> 
     <li><a href="https://github.com/zhaoyig">Github</a></li>
     <li><a href="https://github.com/lexa-lang/lexa">The Lexa Programmming Language</a></li>
 </ul>
