--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <li class="pub-list">
         <div class="pub-title" style="float: left; width: auto;"><b>Zero-Cost Lexical Effect Handlers</b></div>
-        <a class="pub-title" style="float: right; width: auto;" href="" target="_blank">In Submission</a>
+        <div class="pub-title" style="float: right; width: auto;" href="" target="_blank">In Submission</div>
         <br>
         <i>Cong Ma, Zhaoyi Ge, Yizhou Zhang</i>
         <div style="color: #04003d;">
