--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 18px; margin-right: 10px;"> 
     <li><a href="https://github.com/zhaoyig">Github</a></li>
-    <li><a href="https://github.com/lexa-lang/lexa">The Lexa Programmming Language</a></li>
+    <li><a href="https://github.com/lexa-lang/lexa">The Lexa Programming Language</a></li>
 </ul>
 
 <address>
