--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html;charset=Shift_JIS" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="Stylesheet" title="solidborder" href="style/sb-top.css" type="text/css" media="screen" />
 
 <title>Zhaoyi Ge</title>
@@ -61,11 +62,11 @@
 <ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 18px; margin-right: 10px;">
 
     <li class="pub-list">
-        <div class="pub-title" style="float: left; width: auto;"><b>Zero-Cost Lexical Effect Handlers</b></div>
-        <div class="pub-title" style="float: right; width: auto;" href="" target="_blank">In Submission</div>
+        <div style="float: left; width: auto;"><b>Zero-Cost Lexical Effect Handlers</b></div>
+        <div style="float: right; width: auto;" href="" target="_blank">In Submission</div>
         <br>
         <i>Cong Ma, Zhaoyi Ge, Yizhou Zhang</i>
-        <div style="color: #04003d;">
+        <div style="color: #04003d">
             Lexical Effect Handlers with Zero Overhead
         </div>
     </li>
