--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div style="float: left; width: auto;"><b>Zero-Cost Lexical Effect Handlers</b></div>
         <div style="float: right; width: auto;" href="" target="_blank">In Submission</div>
         <br>
-        <i>Cong Ma, Zhaoyi Ge, Yizhou Zhang</i>
+        <i>Cong Ma, <i style="font-weight: 600;">Zhaoyi Ge</i>, Yizhou Zhang</i>
         <div style="color: #04003d">
             Lexical Effect Handlers with Zero Overhead
         </div>
@@ -76,7 +76,7 @@
         <div class="pub-title" style="float: left; width: auto;"><b>Lexical Effect Handlers, Directly</b></div>
         <a class="pub-title" style="float: right; width: auto;" href="https://2024.splashcon.org/details/splash-2024-oopsla/113/Lexical-Effect-Handlers-Directly" target="_blank">OOPSLA 2024</a>
         <br>
-        <i>Cong Ma, Zhaoyi Ge, Edward Lee, Yizhou Zhang</i>
+        <i>Cong Ma, <i style="font-weight: 600;">Zhaoyi Ge</i>, Edward Lee, Yizhou Zhang</i>
         <div style="color: #04003d;">
             Compiling high-level, modular algebraic effects to low-level, swift stack switching
         </div>
