--- a/index.html
+++ b/index.html
@@ -1,107 +1,116 @@
 <?xml version="1.0" encoding="Shift_JIS"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="Content-Type" content="text/html;charset=Shift_JIS" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="Stylesheet" title="solidborder" href="style/sb-top.css" type="text/css" media="screen" />
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=Shift_JIS" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="Stylesheet" title="solidborder" href="style/sb-top.css" type="text/css" media="screen" />
 
-<title>Zhaoyi Ge</title>
+    <title>Zhaoyi Ge</title>
 
 
-<style>
-    #container {
-        width: 100%;
-        margin: 0;
-        margin-right: 100px;
-    }
-    #first {
-        width: 39%;
-        float: left;
-        height: 150px;
-        margin: 0%;
-    }
-    #second {
-        width: 60%;
-        float: left;
-        height: 150px;
-        margin: 0%;
-    }
-</style>
+    <style>
+        #container {
+            width: 100%;
+            margin: 0;
+            margin-right: 100px;
+        }
+
+        #first {
+            width: 39%;
+            float: left;
+            height: 150px;
+            margin: 0%;
+        }
+
+        #second {
+            width: 60%;
+            float: left;
+            height: 150px;
+            margin: 0%;
+        }
+    </style>
 
 
 </head>
 
 <body style="font-size: 18px;">
 
-<div style="width: 700px; margin-left: auto; margin-right: auto;">
-<h1><div style="padding-left: 58px;">About me</div></h1>
+    <div style="width: 700px; margin-left: auto; margin-right: auto;">
+        <h1>
+            <div style="padding-left: 58px;">About me</div>
+        </h1>
 
-<div id="container">
-    <div id="first">
-        <div style="text-align: left; font-size: x-large; margin-top:10px; margin-left: 10px;">Zhaoyi Ge</div>
-        <div style="text-align: left; font-size: large; margin-top:10px; margin-left: 10px; letter-spacing: 2px; font-family: serif;">葛兆易</div>
-        <br>
-        <div style="text-align: left; font-size: 16px; margin-top:10px; margin-left: 10px; font-family: monospace;">zhaoyi.ge@uwaterloo.ca</div>
-    </div>
-    <div id="second">
-        <div style="text-align: left; margin-top:10px; font-size: 18px;">
-            I'm a 4th year Computer Science undergrad at the University of Waterloo. Sometimes I go by the name of August.
-            <br><br>I am interested in type systems, algebraic effects, functional programming and logics in computer science.</div>
-    </div>
-    <div id="clear"></div>
-</div>
-
-<br>
-<div style="margin-bottom: 180px;"></div>
-
-<h1 style="text-align: left;"><div style="padding-left: 58px;">Publications</div></h1>
-
-<ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 18px; margin-right: 10px;">
-
-    <li class="pub-list">
-        <div style="float: left; width: auto;"><b>Zero-Cost Lexical Effect Handlers</b></div>
-        <div style="float: right; width: auto;" href="" target="_blank">In Submission</div>
-        <br>
-        <i>Cong Ma, <i style="font-weight: 600;">Zhaoyi Ge</i>, Yizhou Zhang</i>
-        <div style="color: #04003d">
-            Lexical Effect Handlers with Zero Overhead
+        <div id="container">
+            <div id="first">
+                <div style="text-align: left; font-size: x-large; margin-top:10px; margin-left: 10px;">Zhaoyi Ge</div>
+                <div
+                    style="text-align: left; font-size: large; margin-top:10px; margin-left: 10px; letter-spacing: 2px; font-family: serif;">
+                    葛兆易</div>
+                <br>
+                <div
+                    style="text-align: left; font-size: 16px; margin-top:10px; margin-left: 10px; font-family: monospace;">
+                    zhaoyi.ge@uwaterloo.ca</div>
+            </div>
+            <div id="second">
+                <div style="text-align: left; margin-top:10px; font-size: 18px;">
+                    I'm a 4th year Computer Science undergrad at the University of Waterloo. Sometimes I go by the name
+                    of August.
+                    <br><br>I am interested in type systems, algebraic effects, functional programming and logics in
+                    computer science.
+                </div>
+            </div>
+            <div id="clear"></div>
         </div>
-    </li>
 
-
-    <li class="pub-list">
-        <div class="pub-title" style="float: left; width: auto;"><b>Lexical Effect Handlers, Directly</b></div>
-        <a class="pub-title" style="float: right; width: auto;" href="https://2024.splashcon.org/details/splash-2024-oopsla/113/Lexical-Effect-Handlers-Directly" target="_blank">OOPSLA 2024</a>
         <br>
-        <i>Cong Ma, <i style="font-weight: 600;">Zhaoyi Ge</i>, Edward Lee, Yizhou Zhang</i>
-        <div style="color: #04003d;">
-            Compiling high-level, modular algebraic effects to low-level, swift stack switching
-        </div>
-    </li>
+        <div style="margin-bottom: 180px;"></div>
+
+        <h1 style="text-align: left;">
+            <div style="padding-left: 58px;">Publications</div>
+        </h1>
+
+        <ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 18px; margin-right: 10px;">
+
+            <li class="pub-list">
+                <div class="pub-title" style="float: left; width: auto;"><b>Lexical Effect Handlers, Directly</b></div>
+                <a class="pub-title" style="float: right; width: auto;"
+                    href="https://2024.splashcon.org/details/splash-2024-oopsla/113/Lexical-Effect-Handlers-Directly"
+                    target="_blank">OOPSLA 2024</a>
+                <br>
+                <i>Cong Ma, <i style="font-weight: 600;">Zhaoyi Ge</i>, Edward Lee, Yizhou Zhang</i>
+                <div style="color: #04003d;">
+                    Compiling high-level, modular algebraic effects to low-level, swift stack switching
+                </div>
+            </li>
 
 
-</ul>
+        </ul>
 
-<br>
-<br>
+        <br>
+        <br>
 
-<h1 style="text-align: left;"><div style="padding-left: 58px;">Links</div></h1>
+        <h1 style="text-align: left;">
+            <div style="padding-left: 58px;">Links</div>
+        </h1>
 
-<ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 18px; margin-right: 10px;"> 
-    <li><a href="https://github.com/zhaoyig">Github</a></li>
-    <li><a href="https://github.com/lexa-lang/lexa">The Lexa Programming Language</a></li>
-</ul>
+        <ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 18px; margin-right: 10px;">
+            <li><a href="https://github.com/zhaoyig">Github</a></li>
+            <li><a href="https://github.com/lexa-lang/lexa">The Lexa Programming Language</a></li>
+        </ul>
 
-<address>
-<a href="mailto:zhaoyi.ge@uwaterloo.ca"><div style="padding-right: 58px;">zhaoyi.ge@uwaterloo.ca</div></a>
-</address>
+        <address>
+            <a href="mailto:zhaoyi.ge@uwaterloo.ca">
+                <div style="padding-right: 58px;">zhaoyi.ge@uwaterloo.ca</div>
+            </a>
+        </address>
 
-<!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="https://music.163.com/outchain/player?type=0&id=114815407&auto=1&height=430"></iframe> -->
+        <!-- <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="https://music.163.com/outchain/player?type=0&id=114815407&auto=1&height=430"></iframe> -->
 
-</div><!-- main end -->
+    </div><!-- main end -->
 
 </body>
+
 </html>
