--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div id="second">
                 <div style="text-align: left; margin-top:10px; font-size: 18px;">
-                    I'm a 4th year Computer Science undergrad at the University of Waterloo. Sometimes I go by the name
+                    I'm an incoming CS PhD at the University of Waterloo. Sometimes I go by the name
                     of August.
                     <br><br>I am interested in type systems, algebraic effects, functional programming and logics in
                     computer science.
@@ -75,15 +75,25 @@
         <ul style="text-align: left; margin-left: 10px; padding: 0%; font-size: 18px; margin-right: 10px;">
 
             <li class="pub-list">
+                <div class="pub-title" style="float: left; width: auto;"><b>Zero-Overhead Lexical Effect Handlers</b></div>
+                <a class="pub-title" style="float: right; width: auto;"
+                    href="https://2025.splashcon.org/track/OOPSLA"
+                    target="_blank">OOPSLA 2025</a>
+                <br>
+                <i>Cong Ma, <i style="font-weight: 600;">Zhaoyi Ge</i>, Max Jung, Yizhou Zhang</i>
+                <!-- <div style="color: #04003d;">
+                    Compiling high-level, modular algebraic effects to low-level, swift stack switching
+                </div> -->
+                <div>
                 <div class="pub-title" style="float: left; width: auto;"><b>Lexical Effect Handlers, Directly</b></div>
                 <a class="pub-title" style="float: right; width: auto;"
                     href="https://2024.splashcon.org/details/splash-2024-oopsla/113/Lexical-Effect-Handlers-Directly"
                     target="_blank">OOPSLA 2024</a>
                 <br>
                 <i>Cong Ma, <i style="font-weight: 600;">Zhaoyi Ge</i>, Edward Lee, Yizhou Zhang</i>
-                <div style="color: #04003d;">
+                <!-- <div style="color: #04003d;">
                     Compiling high-level, modular algebraic effects to low-level, swift stack switching
-                </div>
+                </div> -->
             </li>
 
 
